# Zwischen

./: .flake8  .pre-commit-config.yaml
telegram-bot/: .gitignore  CHANGES_SUMMARY.md  README.md  REFACTORING_ANALYSIS.md  TESTS_ANALYSIS.md  TESTS_ANALYSIS_SUMMARY.md  TEST_REPORT.md  add_admin_column.py  add_column_direct.py  add_missing_columns.sql  bot_data.pkl  check_column.py  check_v35_compliance.py  docker-compose.yml  main.py  mypy.ini  pytest.ini  requirements.txt  run_tests.py  setup.cfg  start.sh  test_setup.py
telegram-bot/ai/: __init__.py  actions.py  core.py  llm.py  rules.py  schemas.py  validator.py
telegram-bot/bot/: __init__.py
telegram-bot/config/: logging.py  settings.py
telegram-bot/db/: README.md  __init__.py  connection.py  errors.py  models.py  schema.sql  users.py
telegram-bot/docs/: AVAILABILITY_AND_CONSTRAINTS.md
telegram-bot/locales/: en.json  fa.json
telegram-bot/scripts/: add_language_column.py  add_v2_columns.py  create_db.sh  create_enum_types.py  make_group_id_nullable.py  migrate_event_id_to_bigint.py  setup_db.sh
telegram-bot/tests/: conftest.py  test_ai_actions.py  test_ai_validator.py  test_callback_data.py  test_callback_protection.py  test_comprehensive.py  test_creation_flow_e2e.py  test_database_schema.py  test_end_to_end_fictional_demo.py  test_err_txt_scenario.py  test_event_enrichment_service.py  test_event_live_card_service.py  test_event_panel_handlers.py  test_event_state_transitions.py  test_flow_simulation.py  test_lifecycle_simulation.py  test_live_card_service.py  test_mosaic_assembly.py  test_services.py  (+8 more)
(+112 files in other folders)
